--- a/CICDハンズオン用資料/CICDハンズオン用資料/buildspec.yml
+++ b/CICDハンズオン用資料/CICDハンズオン用資料/buildspec.yml
@@ -3,8 +3,10 @@ version: 0.2
 phases:
   build:
     commands:
-      - aws deploy push --application-name my-web-app --s3-location s3://my-company-deploy-artifacts-2025/artifact.zip --source src
+      - aws deploy push --application-name my-web-app \
+        --s3-location s3://my-company-deploy-artifacts-2025/artifact.zip \
+        --source CICDハンズオン用資料/CICDハンズオン用資料/src
 artifacts:
   files:
     - '**/*'
-  base-directory: src
+  base-directory: CICDハンズオン用資料/CICDハンズオン用資料/src
